# stuurman

./: .gitignore  .travis.yml  README  README.md  TODO  autogen.sh  configure.ac  travis_script
data/: Makefile.am  stuurman-folder-handler.desktop.in  stuurman-preferences.desktop.in  stuurman.desktop.in
data/ui/: Makefile.am  about.glade.in  autorun.glade  pref.glade  pref.ui
po/: POTFILES.in  de.po  ru.po
src/: Makefile.am  app-config.c  app-config.h  desktop.c  desktop.h  main-win-ui.c  main-win.c  main-win.h  main-window-statusbar.c  overall-nav-history.c  overall-nav-history.h  pcmanfm.c  pcmanfm.h  pref.c  tab-page.c  tab-page.h  utils.c  utils.h  volume-manager.c  wallpaper-manager.c  wallpaper-manager.h
